force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Father_Husband_Name__c</fullName>
        <description>Father/Husband Name</description>
        <label>Father/Husband Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JoinedDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>JoinedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Active Loaned Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pending_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pending Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Share_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Share Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Loaned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Loaned Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Shares__c</fullName>
        <label>Total Shares</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Loan__c</columns>
        <columns>JoinedDate__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>Total_Shares__c</columns>
        <columns>OldId__c</columns>
        <columns>Total_Loaned__c</columns>
        <columns>Pending_Due__c</columns>
        <columns>Share_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>