force-app/main/default/objects/Contact/fields/Shares__c.field-meta.xml
<CustomField>
    <fullName>Shares__c</fullName>
    <label>Shares</label>
    <summarizedField>Shares__c.SharesCount__c</summarizedField>
    <summaryForeignKey>Shares__c.ContactName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>