force-app/main/default/objects/Contact/fields/ShareValue__c.field-meta.xml
<CustomField>
    <fullName>ShareValue__c</fullName>
    <formula>Shares__c  * 50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShareValue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>