force-app/main/default/objects/Contact/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Loan__c</columns>
    <columns>JoinedDate__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Total_Shares__c</columns>
    <columns>OldId__c</columns>
    <columns>Total_Loaned__c</columns>
    <columns>Pending_Due__c</columns>
    <columns>Share_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>